_Source/force-app/main/default/objects/BI_Supported_Route__c/BI_Supported_Route__c.object-meta.xml
<CustomObject>
    <label>Supported Route</label>
    <nameField>
        <displayFormat>OPSR-{000000}</displayFormat>
        <label>Opportunity Supported Route</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supported Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>