_Source/force-app/main/default/objects/BI_Supported_Route__c/fields/BI_Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>BI_Destination_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter city name to search for airport</inlineHelpText>
    <label>Destination Airport</label>
    <referenceTo>SIP_Airport__c</referenceTo>
    <relationshipLabel>Supported Routes (Destination Airport)</relationshipLabel>
    <relationshipName>Supported_Routes_Destinations</relationshipName>
    <type>Lookup</type>
</CustomField>