_Source/force-app/main/default/objects/BI_Supported_Route__c/fields/BI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supported Routes</relationshipLabel>
    <relationshipName>Supported_Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>