_Source/force-app/main/default/objects/BI_Supported_Route__c/fields/BI_Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>BI_Origin_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter city name to search for airport</inlineHelpText>
    <label>Origin Airport</label>
    <referenceTo>SIP_Airport__c</referenceTo>
    <relationshipLabel>Opportunity Supported Routes - Origin</relationshipLabel>
    <relationshipName>Supported_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>